Bugfix in train dataset generation

--- a/generate_dataset.ipynb
+++ b/generate_dataset.ipynb
@@ -166,7 +166,7 @@
     "    seed_train = 2209944264\n",
     "\n",
     "    # Generate dataset\n",
-    "    #dataset_utils.generate_dataset(path, dataset_size, glots, config, seed=seed_train, save=True)\n",
+    "    dataset_utils.generate_dataset(path, dataset_size, glots, config, seed=seed_train, save=True)\n",
     "\n",
     "\n",
     "    ### Generate evaluation and test sets ###\n",
