notebook added to train and evaluate siamese-u-net

--- a/get_omniglot.ipynb
+++ b/get_omniglot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,27 +18,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set target path\n",
+    "tpath = os.path.join(os.getcwd(), 'omniglot/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download and extract omniglot\n",
     "origin_folder = \"https://github.com/brendenlake/omniglot/raw/master/python/\"\n",
     "\n",
     "fnames = [\"images_evaluation.zip\", \"images_background.zip\"]\n",
     "\n",
     "for fname in fnames:\n",
     "    origin = os.path.join(origin_folder, fname)\n",
-    "    fpath = os.path.join(os.getcwd(), fname)\n",
+    "    if not os.path.isdir('omniglot/'):\n",
+    "        os.makedirs('omniglot/')\n",
+    "    fpath = os.path.join(tpath, fname)\n",
     "    urlretrieve(origin, fpath)\n",
-    "    zipfile.ZipFile(fpath).extractall(os.getcwd())"
+    "    zipfile.ZipFile(fpath).extractall(tpath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Open all images and collect them in a nested list\n",
     "def load_glots(path):\n",
     "    glots = []\n",
     "    glot_locs = []\n",
@@ -72,39 +86,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#get datset from: https://github.com/brendenlake/omniglot\n",
-    "glots_train, glot_locs_train = load_glots(path = os.path.join(os.getcwd(), 'images_background/'))\n",
-    "glots_eval, glot_locs_eval = load_glots(path = os.path.join(os.getcwd(), 'images_evaluation/'))"
+    "# Run image opening and collection function\n",
+    "glots_train, glot_locs_train = load_glots(path = os.path.join(tpath, 'images_background/'))\n",
+    "glots_eval, glot_locs_eval = load_glots(path = os.path.join(tpath, 'images_evaluation/'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Write glots to pickle file\n",
-    "path = os.path.join(os.getcwd(), 'omniglot/')\n",
-    "if not os.path.exists(path):\n",
-    "    os.makedirs(path)\n",
+    "#Write dataset to pickle file\n",
+    "if not os.path.exists(tpath):\n",
+    "    os.makedirs(tpath)\n",
     "#Write train split containing all alphabets from images_background\n",
-    "with open(path + 'glots_train.pickle', 'wb') as fp:   \n",
+    "with open(tpath + 'glots_train.pickle', 'wb') as fp:   \n",
     "    pickle.dump(glots_train, fp)\n",
-    "with open(path + 'glot_locs_train.pickle', 'wb') as fp:   \n",
+    "with open(tpath + 'glot_locs_train.pickle', 'wb') as fp:   \n",
     "    pickle.dump(glot_locs_train, fp)\n",
     "#Write evaluation split containing the first 10 alphabets from images_evaluation\n",
-    "with open(path + 'glots_eval.pickle', 'wb') as fp:   \n",
+    "with open(tpath + 'glots_eval.pickle', 'wb') as fp:   \n",
     "    pickle.dump(glots_eval[:10], fp)\n",
-    "with open(path + 'glot_locs_eval.pickle', 'wb') as fp:   \n",
+    "with open(tpath + 'glot_locs_eval.pickle', 'wb') as fp:   \n",
     "    pickle.dump(glot_locs_eval[:10], fp)\n",
     "#Write test split containing the remaining 10 alphabets from images_evaluation \n",
-    "with open(path + 'glots_test.pickle', 'wb') as fp:   \n",
+    "with open(tpath + 'glots_test.pickle', 'wb') as fp:   \n",
     "    pickle.dump(glots_eval[10:], fp)\n",
-    "with open(path + 'glot_locs_test.pickle', 'wb') as fp:   \n",
+    "with open(tpath + 'glot_locs_test.pickle', 'wb') as fp:   \n",
     "    pickle.dump(glot_locs_eval[10:], fp)"
    ]
   }
