cleaned dataset code

--- a/siamese-u-net.ipynb
+++ b/siamese-u-net.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Train on all clutter levels sequentially \n",
-    "number_of_characters = [4]# [4, 8, 16, 32, 64, 128, 256]\n",
+    "number_of_characters = [4, 8, 16, 32, 64, 128, 256]\n",
     "\n",
     "for chars in range(len(number_of_characters)):\n",
     "    print('')\n",
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "# Evaluate all clutter levels sequentially \n",
-    "number_of_characters = [4]# [4, 8, 16, 32, 64, 128, 256]\n",
+    "number_of_characters = [4, 8, 16, 32, 64, 128, 256]\n",
     "\n",
     "for chars in range(len(number_of_characters)):\n",
     "    print('')\n",
