Breaking bugfix in dataset generation

--- a/generate_dataset.ipynb
+++ b/generate_dataset.ipynb
@@ -55,31 +55,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reorder_glots(glots):\n",
-    "    reordered_glots=[]\n",
-    "    for alph in range(len(glots)):\n",
-    "        for char in range(len(glots[alph])):\n",
-    "            reordered_glots.append(glots[alph][char])\n",
+    "def reorder_chars(chars):\n",
+    "    reordered_chars=[]\n",
+    "    for alph in range(len(chars)):\n",
+    "        for char in range(len(chars[alph])):\n",
+    "            reordered_chars.append(chars[alph][char])\n",
     "    \n",
-    "    return reordered_glots\n",
+    "    return reordered_chars\n",
     "\n",
-    "#Load glots from pickle file\n",
+    "#Load chars from pickle file\n",
     "path = OMNIGLOT_DATA\n",
     "\n",
     "#Train split\n",
-    "with open(path + 'glots_train.pickle', 'rb') as fp:\n",
-    "    glots_train = pickle.load(fp)\n",
-    "    glots_train = reorder_glots(glots_train)\n",
+    "with open(path + 'chars_train.pickle', 'rb') as fp:\n",
+    "    chars_train = pickle.load(fp)\n",
+    "    chars_train = reorder_chars(chars_train)\n",
     "    \n",
     "#Evaluation split\n",
-    "with open(path + 'glots_eval.pickle', 'rb') as fp:\n",
-    "    glots_eval = pickle.load(fp)\n",
-    "    glots_eval = reorder_glots(glots_eval)\n",
+    "with open(path + 'chars_eval.pickle', 'rb') as fp:\n",
+    "    chars_eval = pickle.load(fp)\n",
+    "    chars_eval = reorder_chars(chars_eval)\n",
     "    \n",
     "#Test split\n",
-    "with open(path + 'glots_test.pickle', 'rb') as fp:\n",
-    "    glots_test = pickle.load(fp)\n",
-    "    glots_test = reorder_glots(glots_test)"
+    "with open(path + 'chars_test.pickle', 'rb') as fp:\n",
+    "    chars_test = pickle.load(fp)\n",
+    "    chars_test = reorder_chars(chars_test)"
    ]
   },
   {
@@ -95,34 +95,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checksums = [[b'\\xeb\\xce\\x01\\x9a\\xe7f\\xbb\\xaau;\\xcd\\xf1-\\xea\\xf9\\xe5', \n",
-    "              b'\\x9f1\\x0e\\x90\\xc5r\\x11\\xc9\\xbb#\\xd0\\xa9\\xc6&\\xd6\\xdd', \n",
-    "              b\"!h\\x10\\xeb'\\xad\\xe4\\x81\\xf2\\xe0\\xd8cun\\x11\\xff\", \n",
-    "              b'#\\xacSz\\xf1\\xdc\\xcc\\xd9{\\xaf\\xf0pk\\xf4N\\xd1'], \n",
-    "             [b'C\\x1a\\xbf0\\x80@\\xc1Hr(*\\xc36\\x89R\\xfa', \n",
-    "              b'\\xa13\\xe2\\xf8\\xbeX\\x97P\\x8e\\xb87\\xc4\\xabH\\xdc\\xf5', \n",
-    "              b';\\x9apTq\\n\\xbf`CdR\\xe8b\\x85\\xc4\\xd9', \n",
-    "              b'El\\xd0\\xfa\\xc0\\x9c<L\\x1f\\xf1o\\xdai\\x05\\x14\\x89'], \n",
-    "             [b'\\x08W\\xafw\\xa9\\xa8\\xea\\xbd\\xfa)\\x14\\xa4\\xb4\\xf0c\\x13', \n",
-    "              b'~\\x8c\\x84\\x06`\\x8bA\\xb3m\\xfb\\xd4\\xe4\\x00\\xb2\\x83\\x1a', \n",
-    "              b'\\x0cv\\xa1.B\\xfc\\x16F\\xb8u\\xa4\\xbap\\x07\\xbc\\xe9', \n",
-    "              b'\\x02<\\xe5\\x1eg\\xf7WWEr4]\\xc2\\xb1|='], \n",
-    "             [b'/\\xe56\\xff\\xec\\xb2}\\xa9\\xe1\\xec\\xa1\"\\xdcV\\x1dX', \n",
-    "              b'\\x0c\\xc3\\xd6N\\xcc\\x1e\\xec\\x03\\x8a[J;[\\n2|', \n",
-    "              b'\\xb5\\xb7\\x1di\\xb1\\xbb\\xed\\x7f\\x08\\xfc\\x94.\\xb4\\xc6\\xdcZ', \n",
-    "              b'\\xe5\\xe2\\x9a\\x93\\xfb\\xf0ptJW\\xb2\\x9fv\\xc7`$'], \n",
-    "             [b'\\xff\\xec\\x121\\xe4\\xd0K\\xdd\\x8c\\x08\\xf0.N\\xc2%\\xe0', \n",
-    "              b'\\x12\\xe5X\\xe8_\\x92!7n\\xdf\\x94,KS\\x0f\\x7f', \n",
-    "              b\"T\\x9f\\xba\\xe4\\xa1hxq'\\xf8\\x91X\\x93\\xedC\\xe5\", \n",
-    "              b'^\\x1f@\\\\\\xacUrX\\xadR\\n\\xb5\\xcd\\xbb\\xa6)'], \n",
-    "             [b'\\xd0\\xa4\\xbe\\x038\\xca\\xf17r\\xacg\\xc3w5\\xea\\xa0', \n",
-    "              b'\\xd9W\\xe5\\xf3\\xcc\\x03w\\xebL\\xe6;\\tl]\\xf2\\xfb', \n",
-    "              b'\\x90\\x93\\x15\\xc9\\xbb\\xcd)\\x96o\\xf5\\x18\"|\\r2X', \n",
-    "              b'\\x90\\xf6!Ts\\x1b7\\xbb\\xf0\\xc4\\x04\\xcd\\xcd\\xe4\\xc3\\xdb'], \n",
-    "             [b'*\\x88\\x88@\\xc8\\x11\\xf4+\\xab\\x05\\xfflE\\xc1\\xcd\\x9b', \n",
-    "              b'\\x84\\x02\\xf3j\\xf9\\x99\\xc0\\x03\\x9a\\x05\\xd1\\x02\\x97~\\xbd\\xaa', \n",
-    "              b'\\xbb\\x12\\x9f\\xc4\\t\\xdd\\xa2\\xde\\xeeW\\x1b\\xf58\\xdb\\x8f\\xdc', \n",
-    "              b\"\\x0fN\\xc5\\x87\\x97\\xda\\xd6\\x84x\\xc6L'\\x177Zz\"]]"
+    "checksums = {4: [b'\\x8c\\x99\\x9e\\\\J\\x9a\\x811g.eB\\xa0\\xb3\\xf2f', \n",
+    "              b';\\xf8\\x05\\xb2vk#!\\xf9\\xad\\xb9\\x88\\xd1\\n\\x0f\\xba', \n",
+    "              b'\\xc6\\x84\\xf4\\x99\\x18<cx\\x82\\xeb\\xed*\\xbb\\xca\\x12\\x8b', \n",
+    "              b'\\xd3\\x8c\\x88\\rM\\xdfSpK\\xa7\\xf2f\\n?\\x0e\\xad'], \n",
+    "             8: [b'\\x0cY\\x0f\\xf4#\\x872:2\\xe1\\x12R\\xcf\\x95rh', \n",
+    "              b'\\x92\\x7f\\xa3>@\\x0cl\\xaa\\x96\\xd7\\xad\\xbaOj\\xdd\\xac', \n",
+    "              b'\\xb9m\\xc0\\xbdN8\\xf2\\x0fkk\\x8c&N\\x88\\xe2\\xb0', \n",
+    "              b'M\\xf1\\x8d\\r\\xe6\\xf5\\xba\\tR\\xe3\\xcc\\xd2\\x91\\xf2\\x96\\x81'], \n",
+    "             16: [b'2}\\x08\\xf3\\xe1\\xb1\\xb1\\xb5\\xed\\x89\\x05\\xf1c\\xedy^', \n",
+    "              b'\\x8bs>\\x95\\xa8n9Nw\\xf0E\\x83\\xf8~+\\xf2', \n",
+    "              b'\\xde8\\xa6\\x04\\xdfq<\\xf0\\x05&a\\x00EB\\xc9B', \n",
+    "              b'\\xbf\\x87uy\\xec\\x90\\xbf \\x9a\\x96x\\x9e\\xd9w\\xd3\\x94'], \n",
+    "             32: [b'\\x813\\x89v\\xc8\\xbd\\xc16\\x8dN\\xc5Z\\x9eS=y', \n",
+    "              b'o\\xd4\\xe0a\\x8a\\x80\\x0f\\xba2_\\x06\\xffE\\xed\\xf9n', \n",
+    "              b':\\x05\\xe2\\x03\\xfb\\x85\\x84\\x18\\xc5\\x18\\x81d\\xd9V\\xb9[', \n",
+    "              b'\\xcc\\x96\\xe1D\\x90\\xba\\xed\\xa3\\xff\\x1c\\xd7\\xd7\\xdf\\xe4\\xd0A'], \n",
+    "             64: [b'\\x11\\x19HZ\\x05-\\xf3A\\xe8\\xe6\\x0f\\x9f\\x14\\n\\xcb\\x17', \n",
+    "              b'VP\\x0c\\xcf\\xa0\\xef\\x07_\\x85[\\xa7\\x0cL*|\\xa2', \n",
+    "              b'(\\x0f\\xba,\\x0c\\x98+\\x85\\xa9n\\xd0a\\x1b\\xe0p\\x03', \n",
+    "              b'W\\xf4\\xc7\\xed\\x19f\\xc50f\\xb3\\xb3\\xc8\\x80\\xf0\\xda\\x90'], \n",
+    "             128: [b'\\x8a\\x11O\\x805\\xb6\\xcf\\xf0L\\xaf\\xad\\x93\\xbf&/\\xb2', \n",
+    "              b'\\xc8\\xd16\\xfa\\xb2\\x16h\\xd8\\xa3h\\xf5\\x8e\\xa7\\x00\\x90v', \n",
+    "              b'\\x05\\xd2\\xd94T\\xe1\\xbb\\xb63\\x90\\x9eX\\xd8\\t\\xfc\\xb9', \n",
+    "              b'el\\x85\\xda\\xfcw\\xce\\xe0\\xf5\\x9c\\xb7 v\\xc6J='], \n",
+    "             256: [b's\\xffZO\\xc1j\\x87\\x7f\\xbf\\x1fj\\xf2]\\xc9\\x9f\\x14', \n",
+    "              b'D\\xbe\\x0eZ%\\xb2\\x16Z\\xea\\x18S\\x1d!6\\xd0w', \n",
+    "              b'\\xfbZ\\xe4$\\x06\\xd88J\\x99\\xfa\\x0b*\\x92\\xdd\\xa3\\xa8', \n",
+    "              b'z\\xee@d\\x0f}\\xe8\\xd3\\xf3\\xad\\xf7\\xe8\\xc9]\\xfbb']}"
    ]
   },
   {
@@ -134,9 +134,6 @@
     "# Generate indicidual datasets for each clutter level\n",
     "nname =  [4, 8, 16, 32, 64, 128, 256]\n",
     "nchars = [3, 7, 15, 31, 63, 127, 255]\n",
-    "# Generate one dataset for all clutter levels\n",
-    "# nname =  ['mix']\n",
-    "# nglots = [[3, 7, 15, 31, 63, 127, 255]]\n",
     "\n",
     "for i in range(len(nname)):\n",
     "    # Set and print saving directory\n",
@@ -157,7 +154,7 @@
     "    # Define number of train images\n",
     "    dataset_size = 2000000\n",
     "    # Choose training alphabets\n",
-    "    glots = glots_train\n",
+    "    chars = chars_train\n",
     "    # Set path\n",
     "    path = dset_dir + 'train/'\n",
     "    # Set a fixed seed\n",
@@ -165,7 +162,7 @@
     "\n",
     "    # Generate dataset\n",
     "    print('Generating dataset train/')\n",
-    "    dataset_utils.generate_dataset(path, dataset_size, glots, config, seed=seed_train, save=True)\n",
+    "    dataset_utils.generate_dataset(path, dataset_size, chars, config, seed=seed_train, save=True)\n",
     "    print('')\n",
     "\n",
     "\n",
@@ -179,34 +176,34 @@
     "\n",
     "    #Generate evaluation set on train characters\n",
     "    seed_val_train = 4020197800\n",
-    "    glots = glots_train\n",
+    "    chars = chars_train\n",
     "    path = dset_dir + 'val-train/'\n",
     "    print('Generating dataset val-train/')\n",
-    "    dataset_utils.generate_dataset(path, dataset_size, glots, config, seed=seed_val_train, save=True, checksum=checksums[i][0])\n",
+    "    dataset_utils.generate_dataset(path, dataset_size, chars, config, seed=seed_val_train, save=True, checksum=checksums[nname[i]][0])\n",
     "    print('')\n",
     "    \n",
     "    #Generate test set on train characters\n",
     "    seed_test_train = 1665765955\n",
-    "    glots = glots_train\n",
+    "    chars = chars_train\n",
     "    path = dset_dir + 'test-train/'\n",
     "    print('Generating dataset val-train/')\n",
-    "    dataset_utils.generate_dataset(path, dataset_size, glots, config, seed=seed_test_train, save=True, checksum=checksums[i][1])\n",
+    "    dataset_utils.generate_dataset(path, dataset_size, chars, config, seed=seed_test_train, save=True, checksum=checksums[nname[i]][1])\n",
     "    print('')\n",
     "\n",
     "    #Generate evaluation set on one-shot characters\n",
     "    seed_val_one_shot = 3755213170\n",
-    "    glots = glots_eval\n",
+    "    chars = chars_eval\n",
     "    path = dset_dir + 'val-one-shot/'\n",
     "    print('Generating dataset val-one-shot/')\n",
-    "    dataset_utils.generate_dataset(path, dataset_size, glots, config, seed=seed_val_one_shot, save=True, checksum=checksums[i][2])\n",
+    "    dataset_utils.generate_dataset(path, dataset_size, chars, config, seed=seed_val_one_shot, save=True, checksum=checksums[nname[i]][2])\n",
     "    print('')\n",
     "\n",
     "    #Generate test set on one-shot characters\n",
     "    seed_test_one_shot = 2301871561\n",
-    "    glots = glots_test\n",
+    "    chars = chars_test\n",
     "    path = dset_dir + 'test-one-shot/'\n",
     "    print('Generating dataset test-one-shot/')\n",
-    "    dataset_utils.generate_dataset(path, dataset_size, glots, config, seed=seed_test_one_shot, save=True, checksum=checksums[i][3])\n",
+    "    dataset_utils.generate_dataset(path, dataset_size, chars, config, seed=seed_test_one_shot, save=True, checksum=checksums[nname[i]][3])\n",
     "    print('')\n",
     "\n",
     "print('')\n",
@@ -232,11 +229,11 @@
     "dataset_size = 5\n",
     "\n",
     "# Choose training alphabets\n",
-    "glots = glots_train\n",
+    "chars = chars_train\n",
     "# Set number of images per parallel job\n",
     "config.JOBLENGTH = 1\n",
     "# Set number of distractors\n",
-    "config.DISTRACTORS = 31\n",
+    "config.DISTRACTORS = 7\n",
     "# Set dataset split\n",
     "config.DRAWER_SPLIT = 'train'\n",
     "config.set_drawer_split()\n",
@@ -246,7 +243,7 @@
     "path = DATASET_DIR + 'visualize/'\n",
     "\n",
     "# Run visualization\n",
-    "dataset_utils.generate_dataset(path, dataset_size, glots, config, seed=None, save=False, show=True)"
+    "dataset_utils.generate_dataset(path, dataset_size, chars, config, seed=None, save=False, show=True)"
    ]
   }
  ],
@@ -255,6 +252,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "varInspector": {
    "cols": {
