--- a/get_omniglot.ipynb
+++ b/get_omniglot.ipynb
@@ -53,9 +53,9 @@
    "outputs": [],
    "source": [
     "# Open all images and collect them in a nested list\n",
-    "def load_glots(path):\n",
-    "    glots = []\n",
-    "    glot_locs = []\n",
+    "def load_chars(path):\n",
+    "    chars = []\n",
+    "    char_locs = []\n",
     "\n",
     "    alphabet = [os.path.join(path, x) for x in sorted(os.listdir(path))]\n",
     "    for alph in alphabet:\n",
@@ -64,24 +64,24 @@
     "        alph_char_locs = []\n",
     "\n",
     "        for char in character:\n",
-    "            glot_insts = [os.path.join(char, x) for x in sorted(os.listdir(char))]\n",
-    "            glot_instances = []\n",
+    "            char_insts = [os.path.join(char, x) for x in sorted(os.listdir(char))]\n",
+    "            char_instances = []\n",
     "\n",
-    "            for glot_inst in glot_insts:\n",
-    "                tmp_im = Image.open(glot_inst)\n",
+    "            for char_inst in char_insts:\n",
+    "                tmp_im = Image.open(char_inst)\n",
     "                tmp_im = tmp_im.convert('L')\n",
     "                tmp_im = ImageOps.invert(tmp_im)\n",
     "                tmp_im = tmp_im.convert('1')\n",
     "\n",
-    "                glot_instances.append(tmp_im)\n",
+    "                char_instances.append(tmp_im)\n",
     "\n",
-    "            alph_chars.append(glot_instances)\n",
-    "            alph_char_locs.append(glot_insts)\n",
+    "            alph_chars.append(char_instances)\n",
+    "            alph_char_locs.append(char_insts)\n",
     "\n",
-    "        glots.append(alph_chars)\n",
-    "        glot_locs.append(alph_char_locs)\n",
+    "        chars.append(alph_chars)\n",
+    "        char_locs.append(alph_char_locs)\n",
     "        \n",
-    "    return glots, glot_locs"
+    "    return chars, char_locs"
    ]
   },
   {
@@ -91,8 +91,8 @@
    "outputs": [],
    "source": [
     "# Run image opening and collection function\n",
-    "glots_train, glot_locs_train = load_glots(path = os.path.join(tpath, 'images_background/'))\n",
-    "glots_eval, glot_locs_eval = load_glots(path = os.path.join(tpath, 'images_evaluation/'))"
+    "chars_train, char_locs_train = load_chars(path = os.path.join(tpath, 'images_background/'))\n",
+    "chars_eval, char_locs_eval = load_chars(path = os.path.join(tpath, 'images_evaluation/'))"
    ]
   },
   {
@@ -105,20 +105,20 @@
     "if not os.path.exists(tpath):\n",
     "    os.makedirs(tpath)\n",
     "#Write train split containing all alphabets from images_background\n",
-    "with open(tpath + 'glots_train.pickle', 'wb') as fp:   \n",
-    "    pickle.dump(glots_train, fp)\n",
-    "with open(tpath + 'glot_locs_train.pickle', 'wb') as fp:   \n",
-    "    pickle.dump(glot_locs_train, fp)\n",
+    "with open(tpath + 'chars_train.pickle', 'wb') as fp:   \n",
+    "    pickle.dump(chars_train, fp)\n",
+    "with open(tpath + 'char_locs_train.pickle', 'wb') as fp:   \n",
+    "    pickle.dump(char_locs_train, fp)\n",
     "#Write evaluation split containing the first 10 alphabets from images_evaluation\n",
-    "with open(tpath + 'glots_eval.pickle', 'wb') as fp:   \n",
-    "    pickle.dump(glots_eval[:10], fp)\n",
-    "with open(tpath + 'glot_locs_eval.pickle', 'wb') as fp:   \n",
-    "    pickle.dump(glot_locs_eval[:10], fp)\n",
+    "with open(tpath + 'chars_eval.pickle', 'wb') as fp:   \n",
+    "    pickle.dump(chars_eval[:10], fp)\n",
+    "with open(tpath + 'char_locs_eval.pickle', 'wb') as fp:   \n",
+    "    pickle.dump(char_locs_eval[:10], fp)\n",
     "#Write test split containing the remaining 10 alphabets from images_evaluation \n",
-    "with open(tpath + 'glots_test.pickle', 'wb') as fp:   \n",
-    "    pickle.dump(glots_eval[10:], fp)\n",
-    "with open(tpath + 'glot_locs_test.pickle', 'wb') as fp:   \n",
-    "    pickle.dump(glot_locs_eval[10:], fp)"
+    "with open(tpath + 'chars_test.pickle', 'wb') as fp:   \n",
+    "    pickle.dump(chars_eval[10:], fp)\n",
+    "with open(tpath + 'char_locs_test.pickle', 'wb') as fp:   \n",
+    "    pickle.dump(char_locs_eval[10:], fp)"
    ]
   }
  ],
