--- a/generate_dataset.ipynb
+++ b/generate_dataset.ipynb
@@ -186,7 +186,7 @@
     "    seed_test_train = 1665765955\n",
     "    chars = chars_train\n",
     "    path = dset_dir + 'test-train/'\n",
-    "    print('Generating dataset val-train/')\n",
+    "    print('Generating dataset test-train/')\n",
     "    dataset_utils.generate_dataset(path, dataset_size, chars, config, seed=seed_test_train, save=True, checksum=checksums[nname[i]][1])\n",
     "    print('')\n",
     "\n",
