--- a/mask-net.ipynb
+++ b/mask-net.ipynb
@@ -9,7 +9,7 @@
     "import model\n",
     "import os\n",
     "\n",
-    "model_name = 'siamese-u-net'\n",
+    "model_name = 'mask-net'\n",
     "DATASET_DIR = os.path.join(os.getcwd(), 'cluttered_omniglot/')\n",
     "LOG_DIR = os.path.join(os.getcwd(), 'logs/' + model_name + '/')"
    ]
@@ -27,22 +27,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train on all clutter levels sequentially \n",
-    "number_of_characters = [4, 8, 16, 32, 64, 128, 256]\n",
+    "# Train encoder and discriminator\n",
+    "# A trained Siamese-U-Net model is required\n",
+    "number_of_characters = [4] # Or feed a list of clutter levels: [4, 8, 16, 32, 64, 128, 256]\n",
     "\n",
     "for chars in range(len(number_of_characters)):\n",
     "    print('')\n",
     "    datadir = DATASET_DIR + '%.d_characters/'%(number_of_characters[chars])\n",
-    "    logdir = LOG_DIR + '%.d_characters/'%(number_of_characters[chars])\n",
+    "    logdir = LOG_DIR + 'encoder_decoder/%.d_characters/'%(number_of_characters[chars])\n",
+    "    ckptdir = os.path.join(os.getcwd(), 'logs/siamese-u-net/') + '%.d_characters/'%(number_of_characters[chars])\n",
     "\n",
     "    model.training(datadir, \n",
     "             logdir, \n",
-    "             epochs=20,\n",
+    "             epochs=5,\n",
     "             model=model_name,\n",
+    "             train_mode='encoder_decoder',\n",
+    "             feature_maps=24,\n",
+    "             batch_size=50,\n",
+    "             learning_rate=0.00005, \n",
+    "             pretraining_checkpoint=ckptdir,\n",
+    "             maximum_number_of_steps=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train the discriminator\n",
+    "number_of_characters = [4] # Or feed a list of clutter levels: [4, 8, 16, 32, 64, 128, 256]\n",
+    "\n",
+    "for chars in range(len(number_of_characters)):\n",
+    "    print('')\n",
+    "    datadir = DATASET_DIR + '%.d_characters/'%(number_of_characters[chars])\n",
+    "    logdir = LOG_DIR + 'discriminator/%.d_characters/'%(number_of_characters[chars])\n",
+    "    ckptdir = LOG_DIR + 'encoder_decoder/%.d_characters/'%(number_of_characters[chars])\n",
+    "\n",
+    "    model.training(datadir, \n",
+    "             logdir, \n",
+    "             epochs=5,\n",
+    "             model=model_name,\n",
+    "             train_mode='discriminator',\n",
     "             feature_maps=24,\n",
     "             batch_size=250,\n",
-    "             learning_rate=0.0005, \n",
-    "             initial_training=True, \n",
+    "             learning_rate=0.00025, \n",
+    "             pretraining_checkpoint=ckptdir,\n",
     "             maximum_number_of_steps=0)"
    ]
   },
@@ -65,15 +95,14 @@
     "for chars in range(len(number_of_characters)):\n",
     "    print('')\n",
     "    datadir = DATASET_DIR + '%.d_characters/'%(number_of_characters[chars])\n",
-    "    logdir = LOG_DIR + '%.d_characters/'%(number_of_characters[chars])\n",
+    "    logdir = LOG_DIR + 'discriminator/%.d_characters/'%(number_of_characters[chars])\n",
     "\n",
     "    model.evaluation(datadir, \n",
     "             logdir, \n",
     "             model=model_name,\n",
     "             feature_maps=24,\n",
     "             batch_size=250,\n",
-    "             threshold=0.3,\n",
-    "             max_steps=0)"
+    "             threshold=0.3)"
    ]
   }
  ],
